--- a/app_aerotur/templates/home.html
+++ b/app_aerotur/templates/home.html
@@ -97,7 +97,23 @@
     </table>
 </div>
 
-<!-- Adicionando o script do Bootstrap JS -->
+<!-- Tabela de pessoas -->
+<table>
+    <thead>
+        <tr>
+            <th>Nome</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for pessoa in pessoas %}
+            <tr>
+                <td>{{ pessoa.nome }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
