--- a/app_aerotur/templates/add_pessoa.html
+++ b/app_aerotur/templates/add_pessoa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Produto</title>
+    <title>Cadastrar Pessoa</title>
     <!-- Adicionando o link para o Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -50,14 +50,14 @@
 <body>
 
 <div class="container">
-    <h1>Editar Produto</h1>
+    <h1>Adicionar novo cadastro</h1>
     <div class="form-container">
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary btn-salvar">Salvar Alterações</button>
+            <button type="submit" class="btn btn-primary btn-salvar">Salvar Pessoa</button>
         </form>
-        <a href="{% url 'home' %}" class="btn btn-link btn-voltar">Voltar para a lista</a>
+        <a href="{% url 'home' %}" class="btn btn-link btn-voltar">Voltar para a pagina inicial</a>
     </div>
 </div>
 
