--- a/app_aerotur/templates/deletar_pessoa.html
+++ b/app_aerotur/templates/deletar_pessoa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deletar Produto</title>
+    <title>Deletar cadastro</title>
     <!-- Adicionando o link para o Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -45,7 +45,7 @@
 <body>
 
 <div class="container">
-    <h1>Tem certeza que deseja excluir o produto "{{ produto.nome }}"?</h1>
+    <h1>Tem certeza que deseja excluir o cadastro de "{{ pessoa.nome }}"?</h1>
     <div class="form-container">
         <form method="POST">
             {% csrf_token %}
