--- a/app_aerotur/templates/editar_pessoa.html
+++ b/app_aerotur/templates/editar_pessoa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Produto</title>
+    <title>Editar Dados de cadastro</title>
     <!-- Adicionando o link para o Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -50,12 +50,12 @@
 <body>
 
 <div class="container">
-    <h1>Criar Novo Produto</h1>
+    <h1>Editar cadastro</h1>
     <div class="form-container">
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary btn-salvar">Salvar Produto</button>
+            <button type="submit" class="btn btn-primary btn-salvar">Salvar Alterações</button>
         </form>
         <a href="{% url 'home' %}" class="btn btn-link btn-voltar">Voltar para a lista</a>
     </div>
