--- a/app_aerotur/templates/home.html
+++ b/app_aerotur/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Produtos</title>
+    <title>Lista de Pessoas</title>
     <!-- Adicionando o link para o Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -45,7 +45,7 @@
             text-decoration: underline;
         }
 
-        .btn-criar-produto {
+        .btn-add-pessoa {
             margin: 20px;
             display: block;
             width: 200px;
@@ -57,61 +57,26 @@
 <body>
 
 <div class="container">
-    <h1>Lista de Produtos</h1>
-    <a href="{% url 'criar_produto' %}" class="btn btn-primary btn-criar-produto">Criar Novo Produto</a>
+    <h1>Lista de Pessoas cadastradas Ordebada por nome</h1>
+    <td class="actions"></td>
+    <a href="{% url 'add_pessoa' %}" class="btn btn-primary btn-add-pessoa">Adicionar cadastro</a>
     
-    <div class="ordenar">
-        Ordenar por: 
-        <a href="?ordem=nome">Nome</a> | 
-        <a href="?ordem=preco">Preço</a>
-    </div>
-    
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Preço</th>
-                <th>Quantidade em Estoque</th>
-                <th>Data de Criação</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for produto in produtos %}
-            <tr>
-                <td>{{ produto.nome }}</td>
-                <td>R$ {{ produto.preco }}</td>
-                <td>{{ produto.quantidade_estoque }}</td>
-                <td>{{ produto.data_criacao|date:"d/m/Y H:i" }}</td>
-                <td class="actions">
-                    <a href="{% url 'editar_produto' produto.id %}" class="btn btn-warning btn-sm">Editar</a> | 
-                    <a href="{% url 'deletar_produto' produto.id %}" class="btn btn-danger btn-sm">Deletar</a>
-                </td>
-            </tr>
-            {% empty %}
-            <tr>
-                <td colspan="5">Nenhum produto encontrado.</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-
-<!-- Tabela de pessoas -->
-<table>
-    <thead>
-        <tr>
-            <th>Nome</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for pessoa in pessoas %}
-            <tr>
-                <td>{{ pessoa.nome }}</td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+    {% for pessoa in pessoas %}
+    <br>
+    <tr>
+        <td>Nome:{{ pessoa.nome }}</td>
+        <td>Idade:{{ pessoa.idade }}</td>
+        <td>CPF:{{ pessoa.cpf }}</td>
+        <td class="actions">
+            <a href="{% url 'editar_pessoa' pessoa.id %}" class="btn btn-warning btn-sm">Editar</a> | 
+            <a href="{% url 'deletar_pessoa' pessoa.id %}" class="btn btn-danger btn-sm">Deletar</a>
+        </td>
+    </tr>
+    {% empty %}
+    <tr>
+        <td colspan="5">Nenhum cadastro encontrado.</td>
+    </tr>
+    {% endfor %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
