--- a/app_aerotur/templates/home.html
+++ b/app_aerotur/templates/home.html
@@ -62,16 +62,16 @@
     <a href="{% url 'add_pessoa' %}" class="btn btn-primary btn-add-pessoa">Adicionar cadastro</a>
     
     {% for pessoa in pessoas %}
-    <br>
     <tr>
         <td>Nome:{{ pessoa.nome }}</td>
         <td>Idade:{{ pessoa.idade }}</td>
         <td>CPF:{{ pessoa.cpf }}</td>
         <td class="actions">
-            <a href="{% url 'editar_pessoa' pessoa.id %}" class="btn btn-warning btn-sm">Editar</a> | 
-            <a href="{% url 'deletar_pessoa' pessoa.id %}" class="btn btn-danger btn-sm">Deletar</a>
+            <a href="{% url 'editar_pessoa' pessoa.id %}" class="btn btn-warning btn-sm">Editar cadastro</a> | 
+            <a href="{% url 'deletar_pessoa' pessoa.id %}" class="btn btn-danger btn-sm">Deletar cadastro</a>
         </td>
     </tr>
+    <br>
     {% empty %}
     <tr>
         <td colspan="5">Nenhum cadastro encontrado.</td>
