--- a/app_aerotur/templates/home.html
+++ b/app_aerotur/templates/home.html
@@ -73,6 +73,9 @@
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
                         <th scope="col" class="px-6 py-3">
+                            ID
+                        </th>
+                        <th scope="col" class="px-6 py-3">
                             Nome
                         </th>
                         <th scope="col" class="px-6 py-3">
@@ -94,8 +97,11 @@
                     {% for pessoa in pessoas %}
                         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
                             <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                {{ pessoa.nome }}
+                                {{ pessoa.id }}
                             </th>
+                            <td class="px-6 py-4">
+                                {{ pessoa.nome }}
+                            </td>
                             <td class="px-6 py-4">
                                 {{ pessoa.idade }}
                             </td>
